--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,7 +19,19 @@
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Login</a>
+            <%# <%= link_to 'Create Listing', new_listing_path, class: "nav-link active" %>
           </li>
+
+          <%# Comment: Bring back once the methods have been added in %>
+          <%# <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">
+              <% if user_signed_in? %>
+                <%# <%= link_to "Log Out", destroy_user_session_path, method: :destroy %> %>
+              <%# <% else %> %>
+                <%# <%= link_to "Log In", user_session_path, method: :create %> %>
+              <%# <% end %> %>
+            <%# </a>
+          </li> %> %>
 
         </ul>
         <%# Commented out Code: bring this back when search has been implemented %>
