--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,20 +17,14 @@
             <%# <a class="nav-link active" aria-current="page" href="#">Create Listing</a> %>
             <%= link_to 'Create Listing', new_listing_path, class: "nav-link active" %>
           </li>
-          <%# <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Login</a>
-            <%# <%= link_to 'Create Listing', new_listing_path, class: "nav-link active" %>
-          </li> %>
 
           <%# Comment: Bring back once the methods have been added in %>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">
-              <% if user_signed_in? %>
-                <%= link_to "Log Out", destroy_user_session_path, method:"delete", class: "nav-link active" %>
-              <% else %>
-                <%= link_to "Log In", new_user_session_path, method: :create %>
-              <% end %>
-            </a>
+            <% if user_signed_in? %>
+              <%= link_to "Log Out", destroy_user_session_path, method: "delete", class: "nav-link active" %>
+            <% else %>
+              <%= link_to "Log In", new_user_session_path, class: "nav-link active" %>
+            <% end %>
           </li>
 
         </ul>
