--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,7 +1,8 @@
 body {
   background-color: #fff;
   color: #333;
-  margin: 33px; }
+  // margin: 33px; 
+}
 
 body, p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
@@ -35,6 +36,10 @@ div.actions {
 
 #notice {
   color: green; }
+
+.bd-content {
+  margin: 33px;
+}
 
 .field_with_errors {
   padding: 2px;
