implement image upload and view for listings

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -20,5 +20,13 @@
   <%= @listing.sold %>
 </p>
 
+<% if @listing.photo.attached?%>
+  <p>
+      <strong>Photo:</strong><br>
+      <%= image_tag @listing.photo, class: "show-photo" %>
+  </p>
+<% end %>
+
+
 <%= link_to 'Edit', edit_listing_path(@listing) %> |
 <%= link_to 'Back', listings_path %>
